[package]
name = "concord4"
version = "0.1.0"
edition = "2021"
authors = ["Joey Eamigh"]
rust-version = "1.73"
description = "A library to help communicated with the SuperBus Automation Module for the Concord4."
repository = "https://github.com/JoeyEamigh/concord4-rs.git"
documentation = "https://github.com/JoeyEamigh/concord4-rs"
homepage = "https://github.com/JoeyEamigh/concord4-rs"
keywords = ["concord4", "superbus automation module"]
readme = "README.md"
license = "MIT"

[dependencies]
dashmap = "6.0.1"
futures = "0.3.30"
serde = { version = "1.0.204", optional = true, features = ["derive"] }
serde_json = { version = "1.0.121", optional = true }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["sync", "macros"] }
tokio-serial = "5.4.4"
tokio-util = { version = "0.7.11", features = ["codec"] }
tracing = "0.1.40"

[features]
default = []
json = ["dep:serde", "dep:serde_json", "dashmap/serde"]

[package.metadata.docs.rs]
all-features = true
